--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,33 +2,48 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Travel Agency</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title th:text="#{index.title}">Travel Agency</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Travel Agency</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" th:text="#{index.nav.brand}">Travel Agency</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" th:text="#{index.nav.home}" href="#">Home</a>
                 </li>
             </ul>
-            <nav class="navbar navbar-light bg-light">
-                <form class="container-fluid justify-content-start">
-                    <a th:href="@{/auth/sign-in}" class="btn btn-outline-success me-2">Sign in</a>
-                    <button class="btn btn-sm btn-outline-secondary" type="button">Sign up</button>
-                </form>
-            </nav>
+            <div>
+                <a th:href="@{/auth/sign-in}"
+                   class="btn btn-outline-success me-2"
+                   th:text="#{index.nav.sign.in}">
+                    Sign in
+                </a>
+                <a th:href="@{/auth/sign-up}"
+                   class="btn btn-outline-secondary"
+                   th:text="#{index.nav.sign.up}">
+                    Sign up
+                </a>
+            </div>
+            <div class="ms-3">
+                <a th:href="@{/?lang=en}" class="btn btn-sm btn-outline-info">EN</a>
+                <a th:href="@{/?lang=uk}" class="btn btn-sm btn-outline-info">UK</a>
+            </div>
         </div>
     </div>
 </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<div class="container mt-4">
+    <h1 th:text="#{index.header}">Welcome to Travel Agency!</h1>
+    <p th:text="#{index.description}">
+        Discover amazing travel packages and start your adventure today.
+    </p>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
