--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title th:text="#{error.404.title}">404</title>
@@ -9,8 +9,8 @@
     </style>
 </head>
 <body>
-<h1 th:text="#{error.404.title}">Сторінку не знайдено</h1>
-<p th:text="#{error.404.message}">Запитана сторінка не існує.</p>
-<a href="/" th:text="#{error.default.backHome}">Повернутись на головну</a>
+<h1 th:text="#{error.404.title}">Page Not Found</h1>
+<p th:text="#{error.404.message}">Sorry, the page you are looking for does not exist.</p>
+<a href="/" th:text="#{error.default.backHome}">Back to Home</a>
 </body>
 </html>
