--- a/src/main/resources/templates/auth/sign-in.html
+++ b/src/main/resources/templates/auth/sign-in.html
@@ -36,6 +36,10 @@
 
         <button type="submit" class="btn-submit" th:text="#{button.submit}">Submit</button>
     </form>
+
+    <div style="margin-top: 1rem;">
+        <a class="btn btn-register" th:href="@{/auth/sign-up}" th:text="#{button.register}">Register</a>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
