--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -28,6 +28,17 @@
         </div>
 
         <div class="mb-3">
+            <label for="firstName" class="form-label" th:text="#{profile.firstName}">First Name</label>
+            <input type="text" id="firstName" th:field="*{firstName}" class="form-control" placeholder="Enter first name" required/>
+            <div class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
+        </div>
+        <div class="mb-3">
+            <label for="lastName" class="form-label" th:text="#{profile.lastName}">Last Name</label>
+            <input type="text" id="lastName"  th:field="*{lastName}" class="form-control" placeholder="Enter last name" required/>
+            <div class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
+        </div>
+
+        <div class="mb-3">
             <label for="email" class="form-label" th:text="#{email.label}">Email</label>
             <input type="email" id="email" th:field="*{email}" class="form-control" placeholder="Enter email" required/>
             <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
@@ -60,6 +71,7 @@
             </select>
             <div class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></div>
         </div>
+
 
         <button type="submit" class="btn-register" th:text="#{button.register}">Register</button>
     </form>
